<resources>

    <string name="app_name">TipCalc</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_tip_calc">TipCalc</string>
    
    <string name="bill_text_view">Bill</string>
    <string name="bill_edit_text">0.0</string>
    
    <string name="tip_text_view">Tip</string>
    <string name="tip_edit_text">0.0</string>
    
    <string name="final_text_view">Final Bill</string>
    <string name="final_bill_edit_text">0.0</string>
    
    <string name="change_tip_text_view">Tip</string>
    
    <string name="intro_text_view">Introduction</string>
    
    <string name="intro_friendly_text_view">Friendly</string>
    <string name="intro_specials_text_view">Specials</string>
    <string name="intro_opinion_text_view">Opinion</string>
    
    <string name="available_text_view">Availability</string>
    <string name="available_bad_radiobutton">Bad</string>
    <string name="available_ok_radiobutton">Ok</string>
    <string name="available_good_radiobutton">Good</string>
    
    <string name="time_waiting_text_view">Time Waiting for Service</string>
    <string name="start_chronometer_button">Start</string>
    <string name="pause_chronometer_button">Pause</string>
    <string name="reset_chronometer_button">Reset</string>
    
    <string-array name="problem_solving">
        <item>Problem Solving</item>
        <item>Good</item>
        <item>OK</item>
        <item>Bad</item>
    </string-array>

</resources>